--- a/code heart/index.html
+++ b/code heart/index.html
@@ -23,7 +23,7 @@
     <div class="title">
       <!-- EDIT HERE -->
       <h3 class="STARDUST1">2022</h3>
-      <h1 class="STARDUST2">Thư Thư</h1>
+      <h1 class="STARDUST2">Thư Thư 1</h1>
       <h3 class="STARDUST3">L O V E <strong>❤</strong> Y O U</h3>
       <img class="img" src="https://scontent.fhan12-1.fna.fbcdn.net/v/t39.30808-6/287510430_1379014836255734_2266579268172008597_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=09cbfe&_nc_ohc=Cu6YA0Cih0cAX_zLEp9&_nc_ht=scontent.fhan12-1.fna&oh=00_AfAI0Jf33-GiT0DxIx5L_oNdZwFdKKjgtJ4XU36HZP6vwQ&oe=63711A22" alt="JUNO_OKYO" />
       <canvas id="pinkboard"></canvas>
